fix: add position relative to footer to fix z-index

--- a/angular/frontend/src/app/layouts/custom-layout/custom-layout.component.scss
+++ b/angular/frontend/src/app/layouts/custom-layout/custom-layout.component.scss
@@ -58,6 +58,7 @@
 
 .layout-footer {
   grid-area: footer;
+  position: relative;
   z-index: 10; // Below header and sidenav
 }
 
